--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
-.App {
-  text-align: center;
+#app{
+  width: 353px;
+  height: 402px;
+  margin: 50px auto; 
+  background-color: black;
+  border: 2px solid grey;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* ###################
+   #   Buttons.jsx   #
+   ################### */
+#buttons{
+  padding: 0px 2px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button{
+  background-color:rgb(78, 70,70);
+  width: 86px;
+  height: 68px;
+  border: 1px solid black;
+  color: aliceblue;
+  font-family: 'Roboto Mono', monospace;
+  font-size: 1.2em;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+#clear{
+  width: 172px;
+  height: 68px;
+  background-color: rgb(110, 31, 31);
+}
+
+#zero{
+  width: 172px;
+}
+
+#equals{
+  height: 136px;
+  position: absolute;
+  background-color: rgb(49, 54, 102);
+}
+
+#multiply, #add, #subtract, #divide{
+  background-color: rgb(141, 126, 126);
+}
+
+/* ###################
+   #   Results.jsx   #
+   ################### */
+#expression{
   color: white;
+  text-align: right;
+  padding-right: 5px;
+  height: 23px;
+  font-size: 13px;
 }
 
-.App-link {
-  color: #61dafb;
+#display{
+  width: 98%;
+  height: 33px;
+  /* color: "white" */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#display h1{
+  text-align: right;
+  color: aliceblue;
+  font-size: 1.5em;
+
 }
